[metadata]
name = logmap
version = attr: logmap._version.__version__
author = Ryan Heuser
author_email = ryan.heuser@princeton.edu
description = A hierarchical, context-manager logger utility with multiprocess mapping capabilities
long_description = file: README.md
license = GNU General Public License v3
long_description_content_type = text/markdown
url = https://github.com/Princeton-CDH/ppa-nlp
project_urls =
    Project Home = https://cdh.princeton.edu/
    Bug Tracker = https://github.com/Princeton-CDH/ppa-nlp/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >=3.6
install_requires = 
    loguru
    humanfriendly
    tqdm
include_package_data = True

[options.extras_require]
all =
    %(dev)s
    %(test)s
dev =
    tox
    sphinx
    twine
    wheel
    pytest-cov
test =
    pytest>=7.2
    pytest-ordering

