[metadata]
name = logmap
version = 0.2.0
author = Ryan Heuser
author_email = ryan.heuser@princeton.edu
description = A hierarchical, context-manager logger utility with multiprocess mapping capabilities
long_description = file: README.md
license = GNU General Public License v3
long_description_content_type = text/markdown
url = https://github.com/quadrismegistus/logmap
project_urls =
    Bug Tracker = https://github.com/quadrismegistus/logmap/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    humanfriendly
    tqdm

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    build
    twine
    wheel
test =
    pytest>=7.2
all =
    %(dev)s
    %(test)s
